# microsoft-hackathon

./: .env.example  .gitignore  POC.md  README.md  config.yaml.example  pyproject.toml
GITHUB [START HERE]/: pull_request_template.md
agents/case-identifier/: README.md
agents/patchpilot/: README.md  __init__.py  __main__.py  _budget.py  cli.py  config.py  runner.py
agents/remediation-engine/: README.md  design.md  psuedocode.md  remedition_contract.json
agents/summary-agent/: README.md
backend/: .env.example  README.md  requirements.txt
backend/app/: __init__.py  _env.py  config.py  ecosystems.py  main.py  models.py
backend/tests/: test_bridge.py  test_manifests.py  test_parsers.py  test_service.py  test_validation_security.py  test_validation_service.py
contracts/: agent-output.json  agent_output.json  alert.json  dashboard.json  dashboard_payload.json  notification.json  validation.json  validation_output.json
demo/: POC.md  README.md  pipeline_runner.py
docs/: architecture.md  demo-flow.md  roadmap.md  team-roles.md
docs/examples/: sample-alert.json  vulnerable-package.json  vulnerable-requirements.txt  vulnerable.csproj
examples/: notification.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  types.ts
intake/: README.md
scripts/: send_email.sh
src/patchpilot/: README.md  config.py  telemetry.py
src/supplyfix/: README.md  __init__.py  __main__.py  cli.py  config.py  runner.py  telemetry.py
validation/: README.md
(+52 files in other folders)
