[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supplyfix"
version = "0.1.0"
description = "Agentic supply-chain security assistant — finds and fixes vulnerable dependencies, then opens a PR"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=2.0",
    "pydantic>=2.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
supplyfix = "supplyfix.cli:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["src/supplyfix"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
